--- a/main.tex
+++ b/main.tex
@@ -279,6 +279,36 @@
 \renewcommand{\arraystretch}{1.5} % Tăng hệ số khoảng cách dòng (1.5 là ví dụ)
 \pagebreak
 
+
+
+\section*{Danh sách thành viên \& nhiệm vụ}
+\addcontentsline{toc}{section}{Danh sách thành viên \& nhiệm vụ}
+\begin{center}
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|p{5cm}|c|}
+\hline
+\textbf{STT} & \textbf{Họ và tên} & \textbf{MSSV} & \textbf{ Nhiệm vụ} & \textbf{\% hoàn thiện}\\
+\hline 
+%%%%% Student 1 (Hằng) %%%%%%%%%%
+\multirow{3}{*}{1} & \multirow{3}{*}{Lê Thúy Hiền} & \multirow{3}{*}{2310990} & 
+- Code stage 2 \& stage 3b & \multirow{3}{*}{100\%}\\
+ & &  & - Báo cáo chương 3, 4, 5, 6 &\\
+ & &  & - Slide thuyết trình &\\
+\hline
+\multirow{3}{*}{2} & \multirow{3}{*}{Nguyễn Thành Công} & \multirow{3}{*}{2310373} & 
+- Code stage 1 \& stage 3a & \multirow{3}{*}{100\%}\\
+& &  & - Báo cáo chương 1, 2, 3 &\\
+ & &  & - Slide thuyết trình &\\
+
+\hline
+\end{tabular}
+\caption{\label{Bảng 1}Danh sách thành viên \& nhiệm vụ}
+\end{table}
+\end{center}
+\pagebreak
+
+
 \clearpage % Ngắt trang để đảm bảo chương 1 bắt đầu trang mới
 \pagenumbering{arabic} % Chuyển sang số 1, 2, 3...
 \setcounter{page}{1}   % Đặt lại bộ đếm về 1
